--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile files('libs/LingvoIntegration_2.5.2.12.jar')
+    compile files('libs/LingvoIntegration_2.5.2.12-javadoc.jar')
+    compile files('libs/open-dictionary-api-1.2.1.jar')
 }
