--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
         </activity>
 
         <activity
-            android:name=".Writing"
+            android:name=".MainWritingBoard"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
